--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-navigator/cache/*
-!navigator/cache/.symfony
-navigator/logs/*
-!navigator/logs/.symfony
+app/cache/*
+!app/cache/.symfony
+app/logs/*
+!app/logs/.symfony
 web/cache/*
 !web/cache/.symfony
 web/bundles/*
