--- a/src/Application/ImageGridBundle/Resources/config/routing.yml
+++ b/src/Application/ImageGridBundle/Resources/config/routing.yml
@@ -1,9 +1,9 @@
 show_grid_cell:
-  pattern: /grid/:scale/cell/:x/:y/:w/:h
-  defaults: { _bundle: ImageGridBundle, _controller: Default, _action: show }
-  requirements: { scale: '[\d\.]+', x: '[\d]+', y: '[\d]+', w: '[\d]+', h: '[\d]+' }
+  pattern: '/grid/{scale}/cell/{x}/{y}/{w}/{h}'
+  defaults: { _controller: ApplicationImageGridBundle:Default:show }
+#  requirements: { scale: '[\d\.]+', x: '[\d]+', y: '[\d]+', w: '[\d]+', h: '[\d]+' }
 
 navigator:
   pattern: /grid/navigator
-  defaults: { _bundle: ImageGridBundle, _controller: Default, _action: index }
+  defaults: { _controller: ApplicationImageGridBundle:Default:index }
 
